tests/errors/first_stage/.define/invalid_name/invalid_name.am
.define my_const = -2
